# Nexora

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SETUP.md  docker-compose.data.yml  docker-compose.dev.yml  docker-compose.yml  install.ps1  install.sh
backend/: Dockerfile  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 001_add_parent_chat_id.py  002_add_task_steps.py  003_shared_sessions.py  004_multi_org.py  005_org_is_personal.py  006_agent_is_builtin.py  007_workflow_run_steps.py  008_integration_is_default.py  009_task_kanban_fields.py  010_task_agent_overrides.py  011_user_api_keys_and_notifications.py  012_user_token_version.py  013_fk_indexes.py  014_cascade_delete_and_list_indexes.py  015_fix_integer_columns.py  016_missing_columns.py  017_worker_heartbeat.py  018_chat_is_archived.py  019_recovery_engine.py  020_schedules.py  021_webhook_rules.py  022_agent_messages.py  023_chat_notes.py  024_backfill_message_agent_id.py  025_chat_project_ids.py  026_task_retry_policy.py  027_agent_proposals.py  028_plans.py  029_structured_chat_notes.py  030_chat_files.py  031_thread_memory.py  032_signup_invites.py  033_client_message_id.py  034_add_totp_columns.py  035_provider_health.py  036_marketplace_items.py  037_chat_webhooks.py  038_memory_embeddings.py  039_knowledge_base.py  040_user_marketplace_api_key.py  (+39 more)
backend/scripts/: cli_hook_relay.py
backend/src/: main.py  mcp_server.py  runner.py
backend/src/api/: access.py  deps.py
backend/src/core/: cli_rate_limiter.py  config.py  database.py  http_safe.py  permissions.py  pubsub.py  rate_limit.py  redis.py  security.py  ssrf.py  stream_buffer.py
backend/src/integrations/: github.py  gitlab.py
backend/src/models/: __init__.py  agent.py  agent_log.py  agent_memory.py  agent_message.py  agent_proposal.py  agent_role.py  agent_version.py  audit_log.py  backup_job.py  chat.py  chat_file.py  device_token.py  env_var.py  git_credential.py  goal.py  installed_package.py  integration.py  issue.py  knowledge_base.py  marketplace.py  mcp_server.py  memory_note.py  model_profile.py  notification.py  org.py  org_invite.py  outcome.py  permission_group.py  persona.py  plan.py  project.py  project_memory.py  provider.py  schedule.py  signup_invite.py  skill.py  task.py  telegram_pending.py  thread_memory.py  (+6 more)
backend/src/providers/: __init__.py  capabilities.py  cli_streams.py  exceptions.py  native_tools.py  reasoning.py  (+5 more)
backend/tests/: conftest.py  test_agent_messaging_org.py  test_agents.py  test_api_key_scoping.py  test_audit_log.py  test_auth.py  test_auth_hardening.py  test_auto_assign.py  test_autonomy.py  test_autopilot.py  test_billing_limits.py  test_budget.py  test_capabilities.py  test_chat_cancel.py  test_chat_flags.py  test_chat_maintenance.py  test_chat_title.py  test_cli_rate_limit.py  test_coerce.py  test_cross_resource_search.py  test_delegation_depth.py  test_delivery_name.py  test_dispatch_slot.py  test_dispatch_spawn_caps.py  test_docker_tools.py  test_embeddings.py  test_env_var_encryption.py  test_env_vars.py  test_file_dedup.py  test_git_local.py  test_git_proxy_provision.py  test_goals.py  test_hierarchy_active.py  test_http_safe.py  test_integration_marketplace.py  test_knowledge_search_org.py  test_local_exec_multiworker.py  test_managed_accounts.py  test_marketplace_deps.py  test_marketplace_import.py  (+50 more)
cli/: pyproject.toml
cli/nexora_cli/: __init__.py  client.py  config.py  console.py  main.py  ws.py
(+823 files in other folders)
