[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexora-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.12",
    "websockets==14.1",

    # Database
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "psycopg2-binary==2.9.10",

    # Redis
    "redis[hiredis]==5.2.1",

    # Auth & security
    "python-jose[cryptography]==3.3.0",
    "argon2-cffi==23.1.0",
    "cryptography==43.0.3",
    "pyotp>=2.9.0",
    "qrcode[pil]>=8.0",
    "aiosmtplib>=3.0.0",

    # Settings
    "pydantic[email]==2.10.3",
    "pydantic-settings==2.6.1",
    "email-validator==2.2.0",

    # HTTP client
    "httpx==0.28.1",
    "aiohttp==3.11.10",
    "mcp>=1.0.0,<2.0.0",

    # LangGraph / LangChain
    "langgraph==0.2.60",
    "langchain==0.3.13",
    "langchain-anthropic==0.3.3",
    "langchain-google-genai==2.0.7",
    "langchain-openai==0.2.14",
    "langchain-community==0.3.13",

    # Provider SDKs
    "anthropic>=0.41.0",
    "openai>=1.57.0",
    "google-generativeai>=0.8.0",

    # Docker SDK
    "docker==7.1.0",

    # Integrations
    "python-telegram-bot==21.9",
    "PyGithub==2.5.0",
    "python-gitlab==5.3.0",

    # Scheduling
    "apscheduler==3.10.4",

    # Utilities
    "tenacity==9.0.0",
    "structlog==24.4.0",
    "python-dotenv==1.0.1",
    "pexpect==4.9.0",

    # Document parsing (Telegram file uploads)
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",

    # Web scraping (URL knowledge ingestion)
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",

    # S3 / object storage
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "vulture>=2.11",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require a live Postgres/Redis (deselect with '-m \"not integration\"')",
]
# Default run excludes integration tests so the unit suite needs no DB/Redis.
addopts = "-m 'not integration'"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/seeds/*",
    "*/alembic/*",
    "*/migrations/*",
    "src/mcp_server.py",
    "*/__pycache__/*",
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.vulture]
min_confidence = 80
paths = ["src"]
exclude = ["src/seeds/", "*/alembic/*"]
