[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexora"
version = "0.1.0"
description = "Nexora CLI — run and manage Nexora AI agents from your terminal"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "questionary>=2",
    "httpx>=0.27",
    "websockets>=12",
    "pydantic>=2",
    "pydantic-settings>=2",
    "aiofiles>=23",
    "click>=8",
    "python-dotenv>=1",
    "platformdirs>=4",
]

[project.scripts]
nexora = "nexora_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["nexora_cli"]
